--- a/src/View/Main_Board.form
+++ b/src/View/Main_Board.form
@@ -642,15 +642,15 @@
               <text value="Первый ход:"/>
             </properties>
           </component>
-          <component id="3c809" class="javax.swing.JComboBox" binding="firstStep">
+          <component id="3c809" class="javax.swing.JComboBox" binding="firstStepBox">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <model>
-                <item value="Нули"/>
-                <item value="Кресты"/>
+                <item value="Крестики"/>
+                <item value="Нолики"/>
               </model>
             </properties>
           </component>
